k8s/app/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: develop
  labels:
    app: account-service
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: account-service
      sub: stage-app
  template:
    metadata:
      labels:
        app: account-service
        sub: stage-app
    spec:
      containers:
        - name: account-service
          image: docker.pkg.github.com/badgersolutions/otus-devops-final-project/piggymetrics_account-service:1.0
      imagePullSecrets:
        - name: github-pkg
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: develop
  labels:
    app: account-service
spec:
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
  selector:
    app: account-service
    sub: stage-app
