k8s/app/auth-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongodb
  namespace: develop
  labels:
    app: auth-mongodb
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: auth-mongodb
      sub: stage-app
  template:
    metadata:
      labels:
        app: auth-mongodb
        sub: stage-app
    spec:
      containers:
        - name: auth-mongodb
          image: docker.pkg.github.com/badgersolutions/otus-devops-final-project/piggymetrics_mongodb:1.0
      imagePullSecrets:
        - name: github-pkg
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongodb
  namespace: develop
  labels:
    app: auth-mongodb
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: auth-mongodb
    sub: stage-app
