k8s/app/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: develop
  labels:
    app: gateway
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gateway
      sub: stage-app
  template:
    metadata:
      labels:
        app: gateway
        sub: stage-app
    spec:
      containers:
        - name: gateway
          image: docker.pkg.github.com/badgersolutions/otus-devops-final-project/piggymetrics_gateway:1.0
      imagePullSecrets:
        - name: github-pkg
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: develop
  labels:
    app: gateway
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    app: gateway
    sub: stage-app
