k8s/app/monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring
  namespace: stage
  labels:
    app: monitoring
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: monitoring
      sub: stage-app
  template:
    metadata:
      labels:
        app: monitoring
        sub: stage-app
    spec:
      containers:
        - name: monitoring
          image: docker.pkg.github.com/badgersolutions/otus-devops-final-project/piggymetrics_monitoring:1.0
      imagePullSecrets:
        - name: github-pkg
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring
  namespace: stage
  labels:
    app: monitoring
spec:
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 8080
  selector:
    app: monitoring
    sub: stage-app
