k8s/app/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: develop
  labels:
    app: rabbitmq
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: rabbitmq
      sub: stage-app
  template:
    metadata:
      labels:
        app: rabbitmq
        sub: stage-app
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: develop
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
    - port: 15671
      targetPort: 15671
      name: rmq-mgmt
    - port: 5671
      targetPort: 5671
      name: rmq-client1
    - port: 5672
      targetPort: 5672
      name: rmq-client2
    - port: 4369
      targetPort: 4369
      name: rmq-epmd
  selector:
    app: rabbitmq
    sub: stage-app
