k8s/app/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: stage
  labels:
    app: registry
    sub: stage-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: registry
      sub: stage-app
  template:
    metadata:
      labels:
        app: registry
        sub: stage-app
    spec:
      containers:
        - name: registry
          image: docker.pkg.github.com/badgersolutions/otus-devops-final-project/piggymetrics_registry:1.0
      imagePullSecrets:
        - name: github-pkg
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: stage
  labels:
    app: registry
spec:
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
  selector:
    app: registry
    sub: stage-app
