k8s/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: stage.semernya.ru
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 80
